# esp32s3-ulp-hello

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  hello.s  main.c
